test-cases/error_mode.wybe
# if case

public type tree { public empty | node(left:tree, key:int, right:tree) }

public def lookup(key:int, tree:tree, ?result:bool) {
    if { tree = empty:: ?result = false
       |  key = tree.key:: ?result = true
       |  key < tree.key:: lookup(key, tree.left, ?result) # mode error
       |  true:: lookup(key, tree.right, ?result)          # mode error
    }
}
